ionic/senseus/www/static/css/event.css
#event-location-container {
    display: -webkit-flex;
    display:flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
}

#event-name-container #fake-header {
    height:30px;
    font-size:18px;
    padding:0;
    display:flex;
    align-items: center;
    justify-content:center;
    background-color: rgb(56, 126, 245);
    color: white;
}

#event-name-container .event-name-form-div {
        width:100%;
        height: 20%;
        justify-content:center;
        align-items:center;
        display:flex;
}

#event-name-container .event-name {
            width: 70%;
            height:50%;
            border: 1px solid black;
}

.event-calendar-title {
    display: -webkit-flex;
    display:flex;
    width:100%;
    height:10%;
    text-align:center;
    font-size: 200%;
    font-weight: bold;
    align-items:center;
    justify-content:center;
}

.event-calendar-title {
    justify-content: flex-start;
}

.event-calendar-title p {
        width: 20%;
        padding-left: 15%;
}

#next-button-div {
    display:flex;
    width: 100%;
    height: 10%;
    padding-bottom: 3%;
    bottom:0;
    align-items:center;
    justify-content: center;
}

#next-button-div .next-button, #next-button-div .back-buttony {
       border: 1px solid gray;
       height: 10%;
       width: 35%;
       display:flex;
       align-items: center;
       justify-content: center;
}

#next-button-div .next-button {
    margin-right: 10%;
    margin-left: 2.5%;
}

#next-button-div .back-buttony {
    margin-left: 12%;
    margin-right: 2.5%;
}

.col-90 {
	display: flex;
	padding-left: 1%;
}

.flex-display-center {
	display: flex;
	align-items: center;
	justify-content: center;
}

.flex-justify-center {
    display: flex;
    justify-content: center;
}

.flex-align-center {
    display: flex;
    align-items: center;
}
.toggle input + .track {
background-color: red;
border-color: red;
}

.full-width {
	width: 100%;
}

.event-type-options > div > label {
		width: 100%;
}

.light-dot{
	opacity: 0.3;
}

.dot {
	margin-left: 1.5%;
	margin-right: 1.5%;
}

#create-event-container {
    width: 100%;
    height: 100%;
}

.outer-create-event {
    width: 38%;
    height: 20%;
    border: 1px solid yellow;
    float:left;
    margin-left: 8%;
    margin-top: 10%;
    display: table;
    cursor: pointer;
    cursor: hand;
}

.handcursor {
    cursor: pointer;
    cursor: hand;
}

.inner-create-event {
    display: table-cell;
    vertical-align: middle;
    width: 100%;
    margin: 0 auto;
    text-align: center;
}

#event-area {
    display: flex;
    flex-direction: column;
    width: 99%;
    height: 96%;
    padding-left: 1%;
}

#inner-location-wrapper, #inner-calendar-wrapper {
    display: flex;
    align-items: center;
}

#inner-location-wrapper span, #inner-calendar-wrapper span {
    margin-right: 1%;
    min-width: 3%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.flex-align-center {
    display: flex;
    align-items: center;
}

.event-col90 {
	display: flex;
	width: 85%;
  flex-shrink: 0;
  flex-grow: 10;
  flex-direction: column;
	min-height: 100%;
  justify-content: center;
}
.col10 {
  display: flex;
  width: 15%;
  height: 100%;
  flex-direction: row;
  min-height: 100%;
  justify-content: center;
  align-items: center;
}

.event-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-bottom:2%;
  margin-top: 2%;"
  font-size: 150%;
  font-weight: bold;
  width: 100%;
}

.event-next-button {
  width: 50%;
}

.event-column {
	display: flex;
	flex-direction: column;
	width:100%;

}

.border1 {
    border: 1px solid black;
}

#event-location-container {
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  border: 1px solid red; }

.event-calendar-title {
  display: -webkit-flex;
  display: flex;
  width: 100%;
  height: 10%;
  text-align: center;
  font-size: 200%;
  font-weight: bold;
  align-items: center;
  justify-content: center; }

.event-calendar-title {
  justify-content: flex-start; }
  .event-calendar-title p {
    width: 20%;
    padding-left: 15%; }

.event-col10 {
  display: flex;
  min-width: 16%;
  height: 100%;
  flex-direction: column;
  min-height: 100%;
}

#event-type-container i {
  display:flex;
  justify-content: center;
}

#event-name-container .bar-footer #progress-bar-container {
  height: 50%;
  width: 100%; }

#event-name-container .bar-footer #next-button-div {
  height: 50%;
  width: 100%; }

.slider {
  height: 100%; }

#event-name-container .bar-footer #progress_circles {
  position: absolute;
  padding: 0;
  margin: 0;
  left: 456px;
  bottom: 40px; }

.col-90 {
  display: flex;
  padding-left: 1%; }

.flex-display-center {
  display: flex;
  align-items: center;
  justify-content: center; }

.toggle input + .track {
  background-color: red;
  border-color: red; }

.full-width {
  width: 100%; }

.event-type-options > div > label {
  width: 100%; }

.light-dot {
  opacity: 0.3; }

.dot {
  margin-left: 2.5%;
  margin-right: 2.5%; }

.radio-icon {
  color: blue;
}

/*Font size correction*?
/*#event-name-container span, #event-name-container div , #event-name-container label {
  font-size: 10px;
}*/

#event-name-container #senseus-header span{
  font-size: 14px;
}

.flex-row, .p0 {
  padding:0;
}

.pl1, #event-type-container .item-content {
  padding-left: 1%;
}

.pr1 {
  padding-right: 1%;
}
.bar-footer {
  height: 10%; }

.bar-footer .column {
  width: 100%; }

.bar-footer .column .row {
  height: 50%;
  width: 100%; }

